pixel shader and animation

--- a/GDENG03_DX/GDENG03_DX.vcxproj
+++ b/GDENG03_DX/GDENG03_DX.vcxproj
@@ -129,23 +129,43 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="appWindow.cpp" />
+    <ClCompile Include="constantBuffer.cpp" />
     <ClCompile Include="deviceContext.cpp" />
     <ClCompile Include="graphicsEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pixelShader.cpp" />
     <ClCompile Include="quadObject.cpp" />
     <ClCompile Include="swapChain.cpp" />
     <ClCompile Include="vertexBuffer.cpp" />
+    <ClCompile Include="vertexShader.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="appWindow.h" />
+    <ClInclude Include="constantBuffer.h" />
     <ClInclude Include="deviceContext.h" />
     <ClInclude Include="graphicsEngine.h" />
     <ClInclude Include="mathUtils.h" />
+    <ClInclude Include="pixelShader.h" />
     <ClInclude Include="quadObject.h" />
     <ClInclude Include="swapChain.h" />
     <ClInclude Include="vertexBuffer.h" />
+    <ClInclude Include="vertexShader.h" />
     <ClInclude Include="window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="pixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="vertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
