--- a/GDENG03_DX/GDENG03_DX.vcxproj
+++ b/GDENG03_DX/GDENG03_DX.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="gameObject.cpp" />
     <ClCompile Include="graphicsEngine.cpp" />
     <ClCompile Include="indexBuffer.cpp" />
+    <ClCompile Include="inputSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pixelShader.cpp" />
     <ClCompile Include="quadObject.cpp" />
@@ -153,12 +154,16 @@
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="graphicsEngine.h" />
     <ClInclude Include="indexBuffer.h" />
+    <ClInclude Include="inputListener.h" />
+    <ClInclude Include="inputSystem.h" />
     <ClInclude Include="mathUtils.h" />
     <ClInclude Include="matrix4x4.h" />
     <ClInclude Include="pixelShader.h" />
+    <ClInclude Include="point.h" />
     <ClInclude Include="quadObject.h" />
     <ClInclude Include="swapChain.h" />
     <ClInclude Include="vector3.h" />
+    <ClInclude Include="vector4.h" />
     <ClInclude Include="vertexBuffer.h" />
     <ClInclude Include="vertexShader.h" />
     <ClInclude Include="window.h" />
