Objects and rendering

--- a/GDENG03_DX/GDENG03_DX.vcxproj
+++ b/GDENG03_DX/GDENG03_DX.vcxproj
@@ -135,9 +135,17 @@
     <ClCompile Include="engineTime.cpp" />
     <ClCompile Include="gameObject.cpp" />
     <ClCompile Include="graphicsEngine.cpp" />
+    <ClCompile Include="Imgui\imgui.cpp" />
+    <ClCompile Include="Imgui\imgui_demo.cpp" />
+    <ClCompile Include="Imgui\imgui_draw.cpp" />
+    <ClCompile Include="Imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="Imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="Imgui\imgui_tables.cpp" />
+    <ClCompile Include="Imgui\imgui_widgets.cpp" />
     <ClCompile Include="indexBuffer.cpp" />
     <ClCompile Include="inputSystem.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="meshObject.cpp" />
     <ClCompile Include="pixelShader.cpp" />
     <ClCompile Include="quadObject.cpp" />
     <ClCompile Include="swapChain.cpp" />
@@ -153,15 +161,25 @@
     <ClInclude Include="engineTime.h" />
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="graphicsEngine.h" />
+    <ClInclude Include="Imgui\imconfig.h" />
+    <ClInclude Include="Imgui\imgui.h" />
+    <ClInclude Include="Imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="Imgui\imgui_impl_win32.h" />
+    <ClInclude Include="Imgui\imgui_internal.h" />
+    <ClInclude Include="Imgui\imstb_rectpack.h" />
+    <ClInclude Include="Imgui\imstb_textedit.h" />
+    <ClInclude Include="Imgui\imstb_truetype.h" />
     <ClInclude Include="indexBuffer.h" />
     <ClInclude Include="inputListener.h" />
     <ClInclude Include="inputSystem.h" />
     <ClInclude Include="mathUtils.h" />
     <ClInclude Include="matrix4x4.h" />
+    <ClInclude Include="meshObject.h" />
     <ClInclude Include="pixelShader.h" />
     <ClInclude Include="point.h" />
     <ClInclude Include="quadObject.h" />
     <ClInclude Include="swapChain.h" />
+    <ClInclude Include="tiny_obj_loader.h" />
     <ClInclude Include="vector3.h" />
     <ClInclude Include="vector4.h" />
     <ClInclude Include="vertexBuffer.h" />
